Bug 552548 - Use JSString accessors in ctypes instead of JS_GetStringChars. r=benjamn